--- a/baby.html
+++ b/baby.html
@@ -73,7 +73,12 @@
                                 <li><a class="dropdown-item" href="reg.html">Register</a></li>
                                 <li><a class="dropdown-item" href="log.html">Log in</a></li>
                                 <li><a class="dropdown-item" href="otp.html">OTP</a></li>
-                                <li><a class="dropdown-item" href="dashboard.html">DASHBOARD</a></li>
+                                <li><a class="dropdown-item" href="update.html">UPDATE</a></li>
+                                <li><a class="dropdown-item" href="product.html">PRODUCT</a></li>
+                                <li><a class="dropdown-item" href="bathing.html">BATHING</a></li>
+                                <li><a class="dropdown-item" href="baby.html">BABY</a></li>
+                                <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                                <li><a class="dropdown-item" href="blog_details.html">BLOG POST</a></li>
                             </ul>
                         </div>
                     </div>
@@ -228,7 +233,8 @@
                 style=" align-items: center; background-color: #ffffff; min-height: 5rem; color: white;">
                 <div class="container">
                     <div class="container">
-                        <h6 class="text-dark text-center fs-4">Home/Baby <span class="dark-black">/Bathing & Changeing</span></h6>
+                        <h6 class="text-dark text-center fs-4">Home/Baby <span class="dark-black">/Bathing &
+                                Changeing</span></h6>
                     </div>
                 </div>
             </div>
@@ -280,7 +286,8 @@
                                             for="form1">Search</label>
                                     </div> -->
                                     <div style="min-height: 3rem;" class="input-group mb-3">
-                                        <button class="btn product-btn btn-outline-secondary" type="button" id="button-addon1">
+                                        <button class="btn product-btn btn-outline-secondary" type="button"
+                                            id="button-addon1">
                                             <i class="fas text-dark fa-search"></i>
                                         </button>
                                         <input style="height: 100%;" type="text" class="form-control" placeholder=""
