--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,12 @@
                                 <li><a class="dropdown-item" href="reg.html">Register</a></li>
                                 <li><a class="dropdown-item" href="log.html">Log in</a></li>
                                 <li><a class="dropdown-item" href="otp.html">OTP</a></li>
-                                <li><a class="dropdown-item" href="dashboard.html">DASHBOARD</a></li>
+                                <li><a class="dropdown-item" href="update.html">UPDATE</a></li>
+                                <li><a class="dropdown-item" href="product.html">PRODUCT</a></li>
+                                <li><a class="dropdown-item" href="bathing.html">BATHING</a></li>
+                                <li><a class="dropdown-item" href="baby.html">BABY</a></li>
+                                <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                                <li><a class="dropdown-item" href="blog_details.html">BLOG POST</a></li>
                             </ul>
                         </div>
                     </div>
@@ -272,8 +277,8 @@
         </div>
 
     </main>
-      <!-- Footer -->
-      <footer>
+    <!-- Footer -->
+    <footer>
         <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
             <!-- Section: Social media -->
             <div class="container">
