--- a/product.html
+++ b/product.html
@@ -73,7 +73,12 @@
                                 <li><a class="dropdown-item" href="reg.html">Register</a></li>
                                 <li><a class="dropdown-item" href="log.html">Log in</a></li>
                                 <li><a class="dropdown-item" href="otp.html">OTP</a></li>
-                                <li><a class="dropdown-item" href="dashboard.html">DASHBOARD</a></li>
+                                <li><a class="dropdown-item" href="update.html">UPDATE</a></li>
+                                <li><a class="dropdown-item" href="product.html">PRODUCT</a></li>
+                                <li><a class="dropdown-item" href="bathing.html">BATHING</a></li>
+                                <li><a class="dropdown-item" href="baby.html">BABY</a></li>
+                                <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                                <li><a class="dropdown-item" href="blog_details.html">BLOG POST</a></li>
                             </ul>
                         </div>
                     </div>
@@ -224,9 +229,12 @@
             </div>
         </section>
         <section>
-            <div class="container-fluid mt-n2 d-flex" style=" align-items: center; background-color: #00659D; min-height: 5rem; color: white;">
+            <div class="container-fluid mt-n2 d-flex"
+                style=" align-items: center; background-color: #00659D; min-height: 5rem; color: white;">
                 <div class="container">
-                    <div style="margin-left: 6rem;" class="container"><h6 class=" fs-4">Home/Product Page</h6></div>
+                    <div style="margin-left: 6rem;" class="container">
+                        <h6 class=" fs-4">Home/Product Page</h6>
+                    </div>
                 </div>
             </div>
         </section>
@@ -244,12 +252,12 @@
                                 </div>
                             </div>
                             <div class="d-flex">
-                                <div class="sub-product"><img src="bundles/images/landing/product-img.png" class="img-fluid" alt=""
-                                        srcset=""></div>
-                                <div class="mx-2 sub-product"><img src="bundles/images/landing/product-img.png" class="img-fluid" alt=""
-                                        srcset=""></div>
-                                <div class="sub-product"><img src="bundles/images/landing/product-img.png" class="img-fluid" alt=""
-                                        srcset=""></div>
+                                <div class="sub-product"><img src="bundles/images/landing/product-img.png"
+                                        class="img-fluid" alt="" srcset=""></div>
+                                <div class="mx-2 sub-product"><img src="bundles/images/landing/product-img.png"
+                                        class="img-fluid" alt="" srcset=""></div>
+                                <div class="sub-product"><img src="bundles/images/landing/product-img.png"
+                                        class="img-fluid" alt="" srcset=""></div>
                             </div>
                         </div>
                         <div class=" ps-4 col-md-6">
@@ -311,9 +319,11 @@
                                             <span style="font-size: 1.3rem;" class=" fw-bolder">10</span>
                                         </div>
                                         <div class="d-flex flex-column">
-                                            <button style="padding-top: 0.2rem; padding-bottom: 0.2rem; background-color: #DBDFE3;"
+                                            <button
+                                                style="padding-top: 0.2rem; padding-bottom: 0.2rem; background-color: #DBDFE3;"
                                                 class="d-block border-0">+</button>
-                                            <button style="padding-top: 0.2rem; padding-bottom: 0.2rem; background-color: #DBDFE3;"
+                                            <button
+                                                style="padding-top: 0.2rem; padding-bottom: 0.2rem; background-color: #DBDFE3;"
                                                 class="d-block border-0">-</button>
                                         </div>
                                     </div>
@@ -321,7 +331,7 @@
                                         <button><b> ADD TO CART</b></button>
                                     </div>
                                 </div>
-                                <div style="font-size: small;"  class="mt-2">
+                                <div style="font-size: small;" class="mt-2">
                                     <div class="d-flex">
                                         <h6 style="color: black;" class="fw-bolder me-3">DESCRIPTION</h6>
                                         <h6 style="color: black;" class="fw-bolder me-3">SPECIFICATION</h6>
