--- a/update.html
+++ b/update.html
@@ -73,7 +73,12 @@
                                 <li><a class="dropdown-item" href="reg.html">Register</a></li>
                                 <li><a class="dropdown-item" href="log.html">Log in</a></li>
                                 <li><a class="dropdown-item" href="otp.html">OTP</a></li>
-                                <li><a class="dropdown-item" href="dashboard.html">DASHBOARD</a></li>
+                                <li><a class="dropdown-item" href="update.html">UPDATE</a></li>
+                                <li><a class="dropdown-item" href="product.html">PRODUCT</a></li>
+                                <li><a class="dropdown-item" href="bathing.html">BATHING</a></li>
+                                <li><a class="dropdown-item" href="baby.html">BABY</a></li>
+                                <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                                <li><a class="dropdown-item" href="blog_details.html">BLOG POST</a></li>
                             </ul>
                         </div>
                     </div>
@@ -294,7 +299,7 @@
                                 <h6 class="text-center fw-bold mt-5">Profile Image</h6>
                             </div>
                         </div>
-                       
+
                     </div>
                 </div>
             </div>
@@ -302,8 +307,8 @@
 
     </main>
     <!-- Footer -->
-      <!-- Footer -->
-      <footer>
+    <!-- Footer -->
+    <footer>
         <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
             <!-- Section: Social media -->
             <div class="container">
