--- a/blog.html
+++ b/blog.html
@@ -73,8 +73,13 @@
                                 <li><a class="dropdown-item" href="reg.html">Register</a></li>
                                 <li><a class="dropdown-item" href="log.html">Log in</a></li>
                                 <li><a class="dropdown-item" href="otp.html">OTP</a></li>
-                                <li><a class="dropdown-item" href="dashboard.html">DASHBOARD</a></li>
-                            </ul>
+                                <li><a class="dropdown-item" href="update.html">UPDATE</a></li>
+                                <li><a class="dropdown-item" href="product.html">PRODUCT</a></li>
+                                <li><a class="dropdown-item" href="bathing.html">BATHING</a></li>
+                                <li><a class="dropdown-item" href="baby.html">BABY</a></li>
+                                <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                                <li><a class="dropdown-item" href="blog_details.html">BLOG POST</a></li>
+                              </ul>
                         </div>
                     </div>
                 </div>
