--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
   <!-- MDB -->
   <link rel="stylesheet" href="css/mdb.min.css" />
   <link rel="stylesheet" href="style.css">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -226,16 +231,16 @@
                 <img src="bundles/images/landing/card-cover-4.jpg" class="hover-img img-fluid d-block w-100" alt="">
                 <div class="to-front">
                   <h6>SOOTHERS</h6>
-                  <p class="display-6">Lifestyle</p>
-                  <p>Explore items</p>
+                  <h2 class="fw-bold">Lifestyle</h2>
+                  <p class="fw-semibold">Explore items</p>
                 </div>
               </div>
               <div class=" overwrite">
                 <img src="bundles/images/landing/card-cover-1.jpg" class="hover-img img-fluid d-block w-100" alt="">
                 <div class="to-front">
                   <h6>BABY CARE</h6>
-                  <p class="display-6">Lifestyle</p>
-                  <p>Explore items</p>
+                  <h2 class="fw-bold">Lifestyle</h2>
+                  <p class="fw-semibold">Explore items</p>
                 </div>
               </div>
             </div>
@@ -244,9 +249,9 @@
             <div class=" overwrite">
               <img src="bundles/images/landing/card-cover-5.jpg" class="hover-img img-fluid d-block w-100" alt="">
               <div class="to-front">
-                <h6>ACCESSORY</h6>
-                <p class="display-6">Lifestyle</p>
-                <p>Explore items</p>
+                <h6 style="color: #e77d6c; margin-top: 2rem;">ACCESSORY</h6>
+                <h2 class="fw-bold">Featured</h2>
+                <p class="fw-semibold">Explore items</p>
               </div>
             </div>
 
@@ -257,16 +262,16 @@
                 <img src="bundles/images/landing/card-cover-2.jpg" class="hover-img img-fluid d-block w-100" alt="">
                 <div class="to-front">
                   <h6>ACCESSORY</h6>
-                  <p class="display-6">Lifestyle</p>
-                  <p>Explore items</p>
+                  <h2 class="fw-bold">Lifestyle</h2>
+                  <p class="fw-semibold">Explore items</p>
                 </div>
               </div>
               <div class=" overwrite">
                 <img src="bundles/images/landing/card-cover-3.jpg" class="hover-img img-fluid d-block w-100" alt="">
                 <div class="to-front">
                   <h6>SPECIAL DESIGN SERIES</h6>
-                  <p class="display-6">Lifestyle</p>
-                  <p>Explore items</p>
+                  <h2 class="fw-bold">Lifestyle</h2>
+                  <p class="fw-semibold">Explore items</p>
                 </div>
               </div>
             </div>
@@ -329,7 +334,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -386,7 +391,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -443,7 +448,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -500,7 +505,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -559,7 +564,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -616,7 +621,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -673,7 +678,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -730,7 +735,7 @@
               <div class="p-3">
                 <div class="d-flex justify-content-between">
                   <div>
-                    <h6 class="dept-head-6">English Department</h6>
+                    <h4 class="dept-head-6">English Department</h4>
                   </div>
                   <div>
                     <button class="btn btn-sm rating-btn">
@@ -925,7 +930,7 @@
         <div class="row me-md-4">
           <div class="col-6">
             <div class="me-5 d-none d-lg-block">
-              <h4 style=" font-weight: 600;" class="sign-h4 text-dark">SIGN UP FOR NEWSLETTER & GET
+              <h4 style="font-weight: 700;" class="sign-h4 text-dark">SIGN UP FOR NEWSLETTER & GET
                 ALL UPDATES</h4>
               <span>Lorem ipsum dolor sit amet, sed do eiusmod tempor incdidunt ut labore et.</span>
             </div>
@@ -1063,7 +1068,7 @@
 
     <!-- Copyright -->
     <div class="text-center pt-3 pb-5 bg-white">
-      <strong> © 2023 gallery BEBE | All Rights Reserved</strong>
+      <h4 class="fw-semibold fs-6"> © 2023 gallery BEBE | All Rights Reserved</h4>
       <!-- <a class="text-reset sign-h4" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
     </div>
     <!-- Copyright -->
