completion of gallery pages

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div style=" height:3rem" class="input-group mb-3">
                   <input placeholder="Search" type="text" class="form-control h-100"
                     aria-label="Text input with dropdown button">
-                  <button style="font-size: 14px; text-transform: inherit;"
+                  <button style="font-size: 14px; text-transform: inherit; border: 1px solid #dddddd;"
                     class="btn btn-outline-secondary text-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><b>Category</b></button>
                   <ul class="dropdown-menu dropdown-menu-end">
