complete gallery pages modified

--- a/otp.html
+++ b/otp.html
@@ -23,7 +23,12 @@
   <!-- MDB -->
   <link rel="stylesheet" href="css/mdb.min.css" />
   <link rel="stylesheet" href="style.css">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -91,7 +96,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-              <a href="#!" class="ms-3">
+              <a href="index.html" class="ms-3">
                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
               </a>
             </div>
@@ -102,7 +107,7 @@
                 <div style=" height:3rem" class="input-group mb-3">
                   <input placeholder="Search" type="text" class="form-control h-100"
                     aria-label="Text input with dropdown button">
-                  <button style="font-size: 14px; text-transform: inherit;"
+                  <button style="font-size: 14px; text-transform: inherit; border: 1px solid #dddddd;"
                     class="btn btn-outline-secondary text-dark dropdown-toggle" type="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><b>Category</b></button>
                   <ul class="dropdown-menu dropdown-menu-end">
@@ -162,7 +167,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
       <div class="container-fluid">
-        <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
+        <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="d-flex justify-content-start align-items-center">
@@ -172,31 +177,31 @@
         <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav mx-auto mb-3 mt-1">
             <li class="nav-item active">
-              <a class="nav-link" href="#!">NEW IN</a>
+              <a class="nav-link" href="dashboard.html">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#!">BATHING & CHANGING</a>
+              <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">BABY SAFETY</a>
+              <a class="nav-link" href="baby.html">BABY SAFETY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">FEEDING & WEANING</a>
+              <a class="nav-link" href="product.html">FEEDING & WEANING</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#!">TOYS & GIFT</a>
+              <a class="nav-link" href="update.html">TOYS & GIFT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">BABY CARE</a>
+              <a class="nav-link" href="checkout.html">BABY CARE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
+              <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#!">PARENTS ROOM</a>
+              <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">BLOG</a>
+              <a class="nav-link" href="blog.html">BLOG</a>
             </li>
           </ul>
         </div>
@@ -233,7 +238,8 @@
                   <input type="text" name="digit-5" class="otp">
                 </div>
               </div>
-              <p class="otp-resend text-center my-4"><a style="color: #F51111; font-weight: 700;" href="">RE SEND OTP?</a></p>
+              <p class="otp-resend text-center my-4"><a style="color: #F51111; font-weight: 700;" href="">RE SEND
+                  OTP?</a></p>
               <div class="otp-btn-container mx-auto my-5">
                 <button type="button">Submit</button>
               </div>
@@ -266,158 +272,156 @@
   </main>
 
 
-
-    <!-- Footer -->
-    <footer>
-      <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
-          <!-- Section: Social media -->
-          <div class="container">
-              <div class="row me-md-4">
-                  <div class="col-6">
-                      <div class="me-5 d-none d-lg-block">
-                          <h4 style=" font-weight: 600;" class="sign-h4 text-dark">SIGN UP FOR NEWSLETTER & GET
-                              ALL UPDATES</h4>
-                          <span>Lorem ipsum dolor sit amet, sed do eiusmod tempor incdidunt ut labore et.</span>
-                      </div>
-                      <!-- Left -->
-                  </div>
-                  <div class="col-1"></div>
-                  <div class="col-lg-5">
-                      <!-- Right -->
-                      <div class="input-group">
-                          <div style="height: 3rem; border: 0 !important;" class="form-outline">
-                              <input id="search-input" type="email" id="form1" class="form-control" />
-                              <label class="form-label" for="form1">Your Email</label>
-                          </div>
-                          <button id="search-button" type="button" class="btn footer-bg">
-                              Subscribe
-                          </button>
-                      </div>
-                      <!-- Right -->
-                  </div>
-                  <!-- <div class="col-1"></div> -->
-              </div>
+  <!-- Footer -->
+  <footer>
+    <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
+      <!-- Section: Social media -->
+      <div class="container">
+        <div class="row me-md-4">
+          <div class="col-6">
+            <div class="me-5 d-none d-lg-block">
+              <h4 style="font-weight: 700;" class="sign-h4 text-dark">SIGN UP FOR NEWSLETTER & GET
+                ALL UPDATES</h4>
+              <span>Lorem ipsum dolor sit amet, sed do eiusmod tempor incdidunt ut labore et.</span>
+            </div>
+            <!-- Left -->
           </div>
-          <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-              <!-- Left -->
-          </section>
-
-          <!-- Section: Links  -->
-          <section class="">
-              <div class="container text-center text-md-start mt-5">
-                  <!-- Grid row -->
-                  <div class="row mt-3">
-                      <!-- Grid column -->
-                      <div class="col-md-4 mx-0 mb-4">
-                          <!-- Content -->
-                          <h6 class=" text-dark sign-h4 mb-4">
-                              Store
-                          </h6>
-                          <img src="bundles/images/landing/gallery_logo.png" height="80"
-                              style="margin-left: -1rem;" />
-
-                          <p class="pt-4">1223, Main Street, Anytown New York, 38000 USA
-                          <p> 888 - 963 - 600</p>
-                          </p>
-                          <p>info@gallerybebe.ng</p>
-                      </div>
-                      <!-- Grid column -->
-
-                      <!-- Grid column -->
-                      <div class="col-md-3 mx-0 mb-4">
-                          <!-- Links -->
-                          <h6 class=" text-dark sign-h4 mb-4">
-                              Product Support
-                          </h6>
-                          <p>
-                              <a href="#!" class="text-reset">Bottles Feeding</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Soother</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Accessories</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Baby Care</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Eating & Drinking</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Bottle Cleaning</a>
-                          </p>
-                      </div>
-                      <!-- Grid column -->
-
-                      <!-- Grid column -->
-                      <div class="col-md-2 mx-0 mb-4">
-                          <!-- Links -->
-                          <h6 class=" text-dark sign-h4 mb-4">
-                              Shop Support
-                          </h6>
-                          <p>
-                              <a href="#!" class="text-reset">Order Status</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Shipping Map</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">My Account</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Order FAQs</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Return Policy</a>
-                          </p>
-                          <p>
-                              <a href="#!" class="text-reset">Collection Points</a>
-                          </p>
-                      </div>
-                      <!-- Grid column -->
-
-                      <!-- Grid column -->
-                      <div class="col-md-3 ps-5 mx-0 mb-md-0 mb-4">
-                          <!-- Links -->
-                          <h6 class=" text-dark mb-4 sign-h4">Socials</h6>
-                          <div class="text-dark">
-                              <a href="" class="me-4 text-reset">
-                                  <i class="fab fa-facebook-f"></i>
-                              </a>
-                              <a href="" class="me-4 text-reset">
-                                  <i class="fab fa-instagram"></i>
-                              </a>
-                              <a href="" class="me-4 text-reset">
-                                  <i class="fab fa-twitter"></i>
-                              </a>
-                              <a href="" class="me-4 text-reset">
-                                  <i class="fab fa-google"></i>
-                              </a>
-                          </div>
-                          <div class="mt-3">
-                              <h5 class="mb-2 text-dark sign-h4" style="font-weight: 700;">Secure Payment</h5>
-                              <img class="img-fluid" src="bundles/images/lit-icons/master-card-logo.png" alt="">
-                              <img class="img-fluid" src="bundles/images/lit-icons/visa-pay-logo.png" alt="">
-                          </div>
-                      </div>
-                      <!-- Grid column -->
-                  </div>
-                  <!-- Grid row -->
-                  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-
-                  </section>
+          <div class="col-1"></div>
+          <div class="col-lg-5">
+            <!-- Right -->
+            <div class="input-group">
+              <div style="height: 3rem; border: 0 !important;" class="form-outline">
+                <input id="search-input" type="email" id="form1" class="form-control" />
+                <label class="form-label" for="form1">Your Email</label>
               </div>
-          </section>
-          <!-- Section: Links  -->
+              <button id="search-button" type="button" class="btn footer-bg">
+                Subscribe
+              </button>
+            </div>
+            <!-- Right -->
+          </div>
+          <!-- <div class="col-1"></div> -->
+        </div>
       </div>
+      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <!-- Left -->
+      </section>
 
-      <!-- Copyright -->
-      <div class="text-center pt-3 pb-5 bg-white">
-          <strong> © 2023 gallery BEBE | All Rights Reserved</strong>
-          <!-- <a class="text-reset sign-h4" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
-      </div>
-      <!-- Copyright -->
+      <!-- Section: Links  -->
+      <section class="">
+        <div class="container text-center text-md-start mt-5">
+          <!-- Grid row -->
+          <div class="row mt-3">
+            <!-- Grid column -->
+            <div class="col-md-4 mx-0 mb-4">
+              <!-- Content -->
+              <h6 class=" text-dark sign-h4 mb-4">
+                Store
+              </h6>
+              <img src="bundles/images/landing/gallery_logo.png" height="80" style="margin-left: -1rem;" />
+
+              <p class="pt-4">1223, Main Street, Anytown New York, 38000 USA
+              <p> 888 - 963 - 600</p>
+              </p>
+              <p>info@gallerybebe.ng</p>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-3 mx-0 mb-4">
+              <!-- Links -->
+              <h6 class=" text-dark sign-h4 mb-4">
+                Product Support
+              </h6>
+              <p>
+                <a href="#!" class="text-reset">Bottles Feeding</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Soother</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Accessories</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Baby Care</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Eating & Drinking</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Bottle Cleaning</a>
+              </p>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-0 mb-4">
+              <!-- Links -->
+              <h6 class=" text-dark sign-h4 mb-4">
+                Shop Support
+              </h6>
+              <p>
+                <a href="#!" class="text-reset">Order Status</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Shipping Map</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">My Account</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Order FAQs</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Return Policy</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Collection Points</a>
+              </p>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-3 ps-5 mx-0 mb-md-0 mb-4">
+              <!-- Links -->
+              <h6 class=" text-dark mb-4 sign-h4">Socials</h6>
+              <div class="text-dark">
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                  <i class="fab fa-google"></i>
+                </a>
+              </div>
+              <div class="mt-3">
+                <h5 class="mb-2 text-dark sign-h4" style="font-weight: 700;">Secure Payment</h5>
+                <img class="img-fluid" src="bundles/images/lit-icons/master-card-logo.png" alt="">
+                <img class="img-fluid" src="bundles/images/lit-icons/visa-pay-logo.png" alt="">
+              </div>
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+          <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+
+          </section>
+        </div>
+      </section>
+      <!-- Section: Links  -->
+    </div>
+
+    <!-- Copyright -->
+    <div class="text-center pt-3 pb-5 bg-white">
+      <h4 class="fw-semibold fs-6"> © 2023 gallery BEBE | All Rights Reserved</h4>
+      <!-- <a class="text-reset sign-h4" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
+    </div>
+    <!-- Copyright -->
   </footer>
   <!-- Footer -->
 
@@ -429,19 +433,13 @@
   <!--javaScript Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-   crossorigin="anonymous"></script> -->
-  <!-- <script src="bundles/owlcarousel/owl.carousel.min.js"></script> -->
-  <!-- <script src="bundles/js/bootstrap.js"></script> -->
-
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"></script>
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"></script>
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
 
 
 
