--- a/story.html
+++ b/story.html
@@ -31,7 +31,7 @@
         rel="stylesheet">
 </head>
 
-<body class="body">
+<body>
     <!-- Start your project here-->
     <header class=" fixd-top">
         <!-- Jumbotron -->
@@ -98,7 +98,7 @@
                     <div class="row">
                         <div
                             class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-                            <a href="#!" class="ms-3">
+                            <a href="index.html" class="ms-3">
                                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
                             </a>
                         </div>
@@ -174,7 +174,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
             <div class="container-fluid">
-                <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
+                <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
                 <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse"
                     data-mdb-target="#navbarExample01" aria-controls="navbarExample01" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -185,31 +185,31 @@
                 <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
                     <ul class="navbar-nav mx-auto mb-3 mt-1">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">NEW IN</a>
+                            <a class="nav-link" href="dashboard.html">NEW IN</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">BATHING & CHANGING</a>
+                            <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">BABY SAFETY</a>
+                            <a class="nav-link" href="baby.html">BABY SAFETY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">FEEDING & WEANING</a>
+                            <a class="nav-link" href="product.html">FEEDING & WEANING</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">TOYS & GIFT</a>
+                            <a class="nav-link" href="update.html">TOYS & GIFT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">BABY CARE</a>
+                            <a class="nav-link" href="checkout.html">BABY CARE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
+                            <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">PARENTS ROOM</a>
+                            <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">BLOG</a>
+                            <a class="nav-link" href="blog.html">BLOG</a>
                         </li>
                     </ul>
                 </div>
@@ -349,6 +349,7 @@
 
 
     </main>
+
 
     <!-- Footer -->
     <footer>
@@ -498,6 +499,7 @@
         <!-- Copyright -->
         <div class="text-center pt-3 pb-5 bg-white">
             <h4 class="fw-semibold fs-6"> © 2023 gallery BEBE | All Rights Reserved</h4>
+            <!-- <a class="text-reset sign-h4" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
         </div>
         <!-- Copyright -->
     </footer>
