--- a/update.html
+++ b/update.html
@@ -23,7 +23,12 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -93,7 +98,7 @@
                     <div class="row">
                         <div
                             class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-                            <a href="#!" class="ms-3">
+                            <a href="index.html" class="ms-3">
                                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
                             </a>
                         </div>
@@ -104,7 +109,7 @@
                                 <div style=" height:3rem" class="input-group mb-3">
                                     <input placeholder="Search" type="text" class="form-control h-100"
                                         aria-label="Text input with dropdown button">
-                                    <button style="font-size: 14px; text-transform: inherit;"
+                                    <button style="font-size: 14px; text-transform: inherit; border: 1px solid #dddddd;"
                                         class="btn btn-outline-secondary text-dark dropdown-toggle" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false"><b>Category</b></button>
                                     <ul class="dropdown-menu dropdown-menu-end">
@@ -169,7 +174,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
             <div class="container-fluid">
-                <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
+                <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
                 <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse"
                     data-mdb-target="#navbarExample01" aria-controls="navbarExample01" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -180,37 +185,39 @@
                 <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
                     <ul class="navbar-nav mx-auto mb-3 mt-1">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">NEW IN</a>
+                            <a class="nav-link" href="dashboard.html">NEW IN</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">BATHING & CHANGING</a>
+                            <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">BABY SAFETY</a>
+                            <a class="nav-link" href="baby.html">BABY SAFETY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">FEEDING & WEANING</a>
+                            <a class="nav-link" href="product.html">FEEDING & WEANING</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">TOYS & GIFT</a>
+                            <a class="nav-link" href="update.html">TOYS & GIFT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">BABY CARE</a>
+                            <a class="nav-link" href="checkout.html">BABY CARE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
+                            <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">PARENTS ROOM</a>
+                            <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#!">BLOG</a>
+                            <a class="nav-link" href="blog.html">BLOG</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
+
     <main>
         <div style="margin: 2rem 3rem 4rem 8rem;">
             <div class="row">
@@ -306,7 +313,9 @@
         </div>
 
     </main>
-    <!-- Footer -->
+
+
+
     <!-- Footer -->
     <footer>
         <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
@@ -315,7 +324,7 @@
                 <div class="row me-md-4">
                     <div class="col-6">
                         <div class="me-5 d-none d-lg-block">
-                            <h4 style=" font-weight: 600;" class="sign-h4 text-dark">SIGN UP FOR NEWSLETTER & GET
+                            <h4 style="font-weight: 700;" class="sign-h4 text-dark">SIGN UP FOR NEWSLETTER & GET
                                 ALL UPDATES</h4>
                             <span>Lorem ipsum dolor sit amet, sed do eiusmod tempor incdidunt ut labore et.</span>
                         </div>
@@ -454,7 +463,7 @@
 
         <!-- Copyright -->
         <div class="text-center pt-3 pb-5 bg-white">
-            <strong> © 2023 gallery BEBE | All Rights Reserved</strong>
+            <h4 class="fw-semibold fs-6"> © 2023 gallery BEBE | All Rights Reserved</h4>
             <!-- <a class="text-reset sign-h4" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
         </div>
         <!-- Copyright -->
@@ -468,12 +477,6 @@
 
     <!--javaScript Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-     crossorigin="anonymous"></script> -->
-    <!-- <script src="bundles/owlcarousel/owl.carousel.min.js"></script> -->
-    <!-- <script src="bundles/js/bootstrap.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
