--- a/reg.html
+++ b/reg.html
@@ -261,6 +261,12 @@
               </div>
               <div class="col-12 mb-3">
                 <div class="form-outline">
+                  <input type="text" id="regAddress" class="form-control" />
+                  <label class="form-label" for="regAddress">Addresss</label>
+                </div>
+              </div>
+              <div class="col-12 mb-3">
+                <div class="form-outline">
                   <input type="text" id="formControlSm" class="form-control" />
                   <label class="form-label" for="formControlSm">Password</label>
                 </div>
